# proc-macro-workshop

builder/: Cargo.toml
builder/src/: lib.rs
builder/tests/: 08-unrecognized-attribute.stderr
debug/: Cargo.toml
debug/src/: lib.rs
