[package]
name = "derive_builder"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[[test]]
name = "optional"
path = "tests/06-optional-field.rs"

[[test]]
name = "repeated"
path = "tests/07-repeated-field.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
